# wasmedge-mysql-binlog-kafka

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.wasmedge-container.yml  docker-compose.yml
.github/workflows/: rust.yml
mysql-binlog-kafka/: Cargo.toml  README.md
mysql-binlog-kafka/src/: main.rs
mysql_cdc/src/: packet_channel.rs
mysql_cdc/src/constants/: checksum_type.rs
mysql_cdc/src/events/: event_header.rs  rotate_event.rs
mysql_cdc/src/events/row_events/: delete_rows_event.rs
mysql_cdc/src/providers/mariadb/events/: gtid_event.rs
mysql_cdc/src/providers/mysql/events/: prev_gtids_event.rs
mysql_cdc/src/providers/mysql/gtid/: gtid.rs  gtid_set.rs  interval.rs
src/: connect.rs  errors.rs  main.rs
src/events/: binlog_event.rs  format_description_event.rs  heartbeat_event.rs  intvar_event.rs  query_event.rs  rows_query_event.rs  table_map_event.rs  xid_event.rs
src/events/row_events/: mysql_value.rs  row_data.rs  update_rows_event.rs  write_rows_event.rs
src/metadata/: default_charset.rs  table_metadata.rs
src/providers/mariadb/events/: gtid_list_event.rs
src/providers/mariadb/gtid/: gtid.rs  gtid_list.rs
src/providers/mysql/events/: gtid_event.rs
src/providers/mysql/gtid/: uuid.rs  uuid_set.rs
