[package]
name = "mysql_cdc"
version = "0.1.6"
edition = "2018"
authors = ["Ruslan Ulianets <ruslan.ulianets@gmail.com>"]
description = "MySQL/MariaDB binlog change data capture (CDC) connector for Rust"
homepage = "https://github.com/rusuly/mysql_cdc"
repository = "https://github.com/rusuly/mysql_cdc"
license = "MIT"

[dependencies]
byteorder = "1.4.3"
sha-1 = "0.10.0"
sha2 = "0.10.1"
hex = "0.4.3"
wasmedge_wasi_socket = "0.4.3"
