[package]
name = "mysql_cdc"
version = "0.1.6"
edition = "2018"
description = "MySQL/MariaDB binlog change data capture (CDC) connector for Rust"
#homepage = "https://github.com/rusuly/mysql_cdc"
#repository = "https://github.com/rusuly/mysql_cdc"
license = "MIT"

[lib]
name = "mysql_cdc"
path = "src/lib.rs"

[dependencies]
byteorder = "1.4.3"
sha-1 = "0.10.0"
sha2 = "0.10.1"
hex = "0.4.3"
wasmedge_wasi_socket = "0.4.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
mysql_common = "0.30.1"
